--- a/File.html
+++ b/File.html
@@ -13,7 +13,7 @@
     <img src="Beauty.jpg" width="20%" alt="Beauty">
 </a>
 
-
+<p>So yesterday i was sick and guess what sophie made spaghetti for me</p>
 
 <body>
 <html>
